# goslog_navigator_bot

./: .gitignore  README.md  alembic.ini  pyproject.toml
.cursor/: AGENTS.md  ecc-install-state.json
.cursor/rules/: common-development-workflow.md  common-testing.md  python-testing.md
alembic/: env.py
alembic/versions/: 0001_wizard_sessions_jsonb.py  0002_counterparty_alerts.py  0003_subscriptions_freemium.py
goslog_navigator_bot/: .env.example  main.py  polling.py
goslog_navigator_bot/bot/handlers/: check.py  payment.py  start.py  wizard.py
goslog_navigator_bot/bot/keyboards/: inline.py  reply.py
goslog_navigator_bot/bot/states/: user.py
goslog_navigator_bot/core/: config.py  logger.py
goslog_navigator_bot/database/: models.py  session.py
goslog_navigator_bot/database/repositories/: __init__.py  counterparties.py  user_profiles.py  wizard_sessions.py
goslog_navigator_bot/scheduler/: __init__.py  daily_alerts.py
goslog_navigator_bot/services/: __init__.py  counterparty_verify.py
