[project]
name = "goslog-navigator-bot"
version = "0.1.0"
description = "Telegram-бот ГосЛог Навигатор — помощник по подключению к системе ГосЛог"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.28.1,<0.29",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "redis>=5.2,<6",
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "loguru>=0.7,<1",
    "reportlab>=4.4.10,<4.5",
    "alembic>=1.18.4,<1.19",
    "apscheduler>=3.10.4,<4",
    "yookassa>=3.6.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
